# xLH-projects

./: Makefile  pyproject.toml
xlh-ai-oven/: .env  agent.py  config.py  deps.py  llm_model.py  tools.py
xlh-ai-oven/codesys/: ai_oven_00_90.project
xlh-cv-tutorial/1 Templates OpenCV/1 Bildanzeige/: README.md  template_image.py
xlh-cv-tutorial/1 Templates OpenCV/2 Bildanzeige mit Event/: task.md  template_image_event.py
xlh-cv-tutorial/1 Templates OpenCV/3 IP Cam/: template_ipcam.py
xlh-cv-tutorial/1 Templates OpenCV/4 Video/: fps.py  task.md  template_video.py
xlh-cv-tutorial/1 Templates OpenCV/5 Webcam/: fps.py  task.md  template_webcam.py
xlh-cv-tutorial/1 Templates OpenCV/6 Webcam writer/: README.md  template_webcam_writer.py
xlh-cv-tutorial/2 Grundlagen der Bildverarbeitung/5 Farbräume/: README.md  color_spaces.py  task.md
xlh-cv-tutorial/3 Demoapplikationen/1 Videobearbeitung/: cut_and_write.py  fps.py  task.md
xlh-cv-tutorial/3 Demoapplikationen/2 Perspektivenkorrektur/: perspective_correction_1.py  perspective_correction_2.py  task.md
xlh-cv-tutorial/3 Demoapplikationen/3 Kantendetektor/: edge_detector.py  task.md
xlh-cv-tutorial/4 Weblinks/: weblinks.md
xlh-cv/misc/: mediapipe_demo_1.py  mediapipe_demo_2.py  mediapipe_demo_3.py  rpi_webcam_server.txt  template_webcam.py  template_webcam_rtsp.py  yolo_v8.py
xlh-cv/misc/image_upscaler/: image_upscaler.py  (+2 more)
xlh-ha/: Makefile
xlh-ha/codesys/: xlh_ha_client_00_02.project
xlh-rgb/: 0_init_folder.bat  1_install_uv_package_manager.bat  2_run_notebooks_jupyter.bat  README.md  pyproject.toml
(+113 files in other folders)
