[project]
name = "xLH-projects"
version = "0.1.0"
description = ""
authors = [
    { name = "Pascal Helfenstein", email = "pascal.helfenstein@xemax.ch" },
    { name = "Thomas Ruoss", email = "thomas.ruoss@xemax.ch" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "pillow>=12.0.0",
    "jinja2>=3.1.6",
    "fastapi>=0.122.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "rpi-ws281x>=5.0.0 ; sys_platform == 'linux'",
    "jupyter>=1.1.1",
    "pydantic-ai>=1.25.1",
    "xlwings>=0.33.16",
    "opcua>=0.98.13",
    "cryptography>=46.0.3",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "streamlit>=1.51.0",
]

[tool.pytest.ini_options]
pythonpath = "."
