[project]
name = "xLH"
version = "0.1.0"
description = ""
authors = [
    { name = "Pascal Helfenstein", email = "pascal.helfenstein@xemax.ch" },
    { name = "Thomas Ruoss", email = "thomas.ruoss@xemax.ch" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "rich>=14.2.0",
    "jupyter>=1.1.1",
    "xlwings>=0.33.16",
    "opcua>=0.98.13",
    "cryptography>=46.0.3",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
]

[tool.pytest.ini_options]
pythonpath = "."
